--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,17 @@
+metamagic.json 0.9.3
+--------------------
+
+Changes:
+
+ * Add json.loads and json.loadb methods
+
+
 metamagic.json 0.9.2
 --------------------
 
 Fixes:
 
- * Fix encoding of aware datetime and time objects when UTC offset is negative 
+ * Fix encoding of aware datetime and time objects when UTC offset is negative
 
 
 metamagic.json 0.9.1
@@ -11,10 +19,10 @@ metamagic.json 0.9.1
 
 Changes:
 
- * Always encode '<', '>' and '&' as Unicode sequences 
+ * Always encode '<', '>' and '&' as Unicode sequences
 
 
 metamagic.json 0.9.0
 --------------------
 
-Initial release. 
+Initial release.
