--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+metamagic.json 0.9.4
+--------------------
+
+Changes:
+
+ * Python encoder casts to int & float explicitly before serialization
+   (to follow C encoder logic more closely)
+
+
 metamagic.json 0.9.3
 --------------------
 
