--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+metamagic.json 0.9.5
+--------------------
+
+Changes:
+
+ * We do not escape '/' characters now (Python standard library
+   'json' module does not either)
+
+
 metamagic.json 0.9.4
 --------------------
 
